# ramwiz

./: .gitignore  Dockerfile  README.md  TODO.txt  docker-compose.win.yml  docker-compose.yml  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-virtual-desktop.sh  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/components/: InfoBar.vue  Toolbar.vue
app/components/Trace/: Upload.vue
app/components/Trace/Setup/: Header.vue
app/components/Trace/View/: Timeline.vue
app/composables/: useBackend.ts  useRenderer.ts
app/layouts/: setup.vue  trace.vue
app/lib/: backend.ts
app/pages/: index.vue
app/pages/trace/: setup.vue  view.vue
app/pages/trace/setup/: commands.vue  memory.vue
app/stores/: session.ts  ui.ts
src/: App.vue  backend.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: csv.rs  lib.rs  main.rs  session.rs  trace.rs  user_data.rs
src-tauri/src/trace/: dictionary.rs  entry.rs  header.rs  serialize.rs
src/components/: TraceFileUpload.vue
src/pages/: index.vue  trace.vue
