[package]
name = "app"
version = "0.1.0"
description = "A simple trace visualizer for Ramulator 2"
authors = ["you"]
license = "MIT"
repository = "https://github.com/ziadomalik/ramwiz"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
memmap2 = "0.9.9"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zerocopy = { version = "0.8.33", features = ["derive"] }
tauri-plugin-store = "2"
serde_yaml = "0.9"
